--- a/gb/21/1/26/n12712473.md
+++ b/gb/21/1/26/n12712473.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cjotkt3047/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cjotkt3047/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/cjotkt3047/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cjotkt3047/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/cjotkt3047/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cjotkt3047/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/cjotkt3047/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cjotkt3047/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/cjotkt3047/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cjotkt3047/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/cjotkt3047/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cjotkt3047/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/cjotkt3047/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cjotkt3047/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/cjotkt3047/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cjotkt3047/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/cjotkt3047/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cjotkt3047/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/cjotkt3047/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cjotkt3047/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cjotkt3047/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cjotkt3047/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cjotkt3047/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cjotkt3047/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>预防老人跌倒 彰化荣家实施影片宣导</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/01/481305-600x400.jpg" />
 <h6>彰化荣家护理师正在和住民们实施卫教。（彰化荣家提供）
 </h6>
 <hr>
-<p>【大纪元2021年01月26日讯】（大纪元记者谢五男台湾彰化报导）<ahref="https://github.com/cjotkt3047/djy/blob/master/gb/tag/%E5%BD%B0%E5%8C%96%E8%8D%A3%E5%AE%B6.md#1">彰化荣家</a>为防范高龄长者常发生的意外事件——跌倒，于日前在该家长青堂失智园区，由护理师薛玉涵以影片等方式宣导“<ahref="https://github.com/cjotkt3047/djy/blob/master/gb/tag/%E9%A2%84%E9%98%B2.md#1">预防</a>跌倒”，以增进照服员及住民对于预防跌倒的观念。</p>
-<p>随着年龄增长及身体功能逐渐退化，会造成平衡感、神经系统及骨骼肌肉关节等身体机能慢慢衰退，导致跌倒发生率逐渐攀升，为<ahref="https://github.com/cjotkt3047/djy/blob/master/gb/tag/%E9%A2%84%E9%98%B2.md#1">预防</a>长辈们跌倒，除给与高龄长者正确的预防跌倒观念，照顾者对于长者日常生活观察，也是不可忽视的。</p>
-<p><ahref="https://github.com/cjotkt3047/djy/blob/master/gb/tag/%E5%BD%B0%E5%8C%96%E8%8D%A3%E5%AE%B6.md#1">彰化荣家</a>薛护理师表示，长辈日常行走时要放慢脚步，若有头晕、下肢无力等身体不适时，应主动寻求协助，并予以使用单拐及轮椅辅助。失智长者因病情需要，大多有服用身心科用药，包含镇定剂、安眠剂，也需注意药品可能造成晕眩之副作用。</p>
+<p>【大纪元2021年01月26日讯】（大纪元记者谢五男台湾彰化报导）<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BD%B0%E5%8C%96%E8%8D%A3%E5%AE%B6.md#1">彰化荣家</a>为防范高龄长者常发生的意外事件——跌倒，于日前在该家长青堂失智园区，由护理师薛玉涵以影片等方式宣导“<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A2%84%E9%98%B2.md#1">预防</a>跌倒”，以增进照服员及住民对于预防跌倒的观念。</p>
+<p>随着年龄增长及身体功能逐渐退化，会造成平衡感、神经系统及骨骼肌肉关节等身体机能慢慢衰退，导致跌倒发生率逐渐攀升，为<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E9%A2%84%E9%98%B2.md#1">预防</a>长辈们跌倒，除给与高龄长者正确的预防跌倒观念，照顾者对于长者日常生活观察，也是不可忽视的。</p>
+<p><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E5%BD%B0%E5%8C%96%E8%8D%A3%E5%AE%B6.md#1">彰化荣家</a>薛护理师表示，长辈日常行走时要放慢脚步，若有头晕、下肢无力等身体不适时，应主动寻求协助，并予以使用单拐及轮椅辅助。失智长者因病情需要，大多有服用身心科用药，包含镇定剂、安眠剂，也需注意药品可能造成晕眩之副作用。</p>
 <p>她说，除此之外，环境也常是造成跌倒主要因素之一，活动区域地板应保持干燥避免湿滑，移除不必要的障碍物，才不会导致长者踢到物品不慎跌倒，空间规划愈简单愈好。夜间睡觉时也必须留一盏小灯，才不会让长者夜间如厕时，因房间视线昏暗导致跌倒。保持明亮的光线，是预防跌倒的第一步。</p>
 <p>该家主任史浩诚表示，平常透过简单的下肢运动，来强化肌力、预防关节僵硬，并可促进全身血液循环，预防生理功能快速退化，每天利用一点时间做暖身操，提升高龄住民的活动性及自理能力，体现健康乐活的老年生活品质。</p>
 <p>责任编辑：黄善</p>
@@ -17,46 +17,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/cjotkt3047/djy/blob/master/gb/21/1/26/n12712599.md#1">有机农业10年有成 台中农改场举开园区揭牌</a></li>
-<li><a href="https://github.com/cjotkt3047/djy/blob/master/gb/21/1/26/n12712468.md#1">防范未然 彰化县31家医院感控升级</a></li>
-<li><a href="https://github.com/cjotkt3047/djy/blob/master/gb/21/1/25/n12710308.md#1">设计改善生活 大叶大学工设系获两奖</a></li>
-<li><a href="https://github.com/cjotkt3047/djy/blob/master/gb/21/1/25/n12710313.md#1">埔心国中办理国小菁英冬令营   推动科技教育</a></li>
-<li><a href="https://github.com/cjotkt3047/djy/blob/master/gb/21/1/25/n12710304.md#1">退化性关节炎不要忍 早日处理享受快意生活</a></li>
-<li><a href="https://github.com/cjotkt3047/djy/blob/master/gb/21/1/22/n12705208.md#1">玉管处修正禁止事项 维护生态及游憩品质</a></li>
-<li><a href="https://github.com/cjotkt3047/djy/blob/master/gb/21/1/22/n12704784.md#1">超前部署 大成与日昭和产业合资世界级蛋品厂</a></li>
-<li><a href="https://github.com/cjotkt3047/djy/blob/master/gb/21/1/22/n12704780.md#1">彰化县陆军士官班校友协会 关怀送爱荣民眷</a></li>
-<li><a href="https://github.com/cjotkt3047/djy/blob/master/gb/21/1/21/n12702745.md#1">林务局补助经费 南投表扬保护石虎栖地民众</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/1/9/n11780782.md#1">预防老人跌倒小贴士</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/5/6/n12088003.md#1">【现场视频】老人跌倒 小伙再三确认后搀扶</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/12/28/n12648910.md#1">揭开司法鉴定面纱 彰化荣家强化教育训练</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/1/14/n12687444.md#1">什么是学术倦怠以及如何预防？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/1/20/n12699671.md#1">引进社会资源 彰化荣家造福住民同仁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/1/21/n12702077.md#1">西悉尼黑镇实施新规 乱扔口罩者重罚450元</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/1/22/n12704117.md#1">北荣桃园分院八德荣家开办预防延缓失能课程</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/1/24/n12709251.md#1">四川政府实施火柴打火机实名制 民间抨击</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615574.md#1">市售鲜乳标章检查业务 彰县全国第一绩优单位</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615578.md#1">职训有成一技在身 学员展现成果</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/cjotkt3047/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/8/n11308535.md#1" target="_blank">金雁：“既得利益者”何以成为反对苏维埃的先锋?</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/16/n11387274.md#1" target="_blank">7-20反迫害 美参众议员致信声援法轮功(1)</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/21/n9978292.md#1" target="_blank">文革中自杀的几个名人（8）“御用文人”吴晗</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/4/n11569061.md#1" target="_blank">法轮功学员受邀在美智库演讲 感动华府听众</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/23/n12706624.md#1">【解密时分】诺查丹玛斯预言：彭斯和美国大选</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/22/n12704671.md#1">新航班机在瑞士降落 乘客拍到UFO</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/23/n12706868.md#1">2021预测：全球瘟疫更具毁灭性 善恶大决战</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/23/n12707590.md#1">史前文明：地球上真的生活着三种人？</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/8/n12675378.md#1">二岁童天天礼佛打坐说前生 总统转生人人争睹</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/25/n12709435.md#1">【拍案惊奇】拜登政策惹反弹 习近平软硬兼施</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/26/n12712047.md#1">【珍言真语】刘锐绍：人大将改香港特首选规</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/25/n12710900.md#1">【微视频】世卫改病毒测试标准 拜登加入送钱</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/24/n12708220.md#1">中共派13架军机大规模扰台 美国务院回应</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/19/n12698437.md#1">Costco九种好吃的甜点 售价低于16美元</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/24/n12708256.md#1">【翻墙必看】中共内斗再升级 谁背地抵制习？</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/24/n12709154.md#1">模仿邓超变谐星？孙俪同父异母妹妹晒照自黑</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/24/n12708979.md#1">胡静不愿被称豪门阔太 自曝一身装扮仅五百元</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/24/n12708753.md#1">好莱坞演员分享和青梅竹马33年婚姻秘诀</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/25/n12711517.md#1">大陆山寨版IU爆红 真实相貌曝光惊呆网友</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/24/n12708262.md#1">与李荣浩分开300天“见面了” 杨丞琳甜晒抱抱照</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/24/n12708389.md#1">加拿大女子梦游 丈夫拍下爆笑画面</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/24/n12708472.md#1">美富翁出100万美元 奖励死后有来世的研究</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/23/n12707431.md#1">酒精消毒如何做有效又安全？医师、消防员教秘诀</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/23/n12706960.md#1">【重播】新冠病毒不断变种 正突破人类防线</a></li>
-<li><a href="https://github.com/aoiepy3717/djy/blob/master/gb/21/1/24/n12708303.md#1">美警犬缉凶遭枪击 手术后出院 警察列队迎接</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613669.md#1">【马克时空】乌获欧盟战机 全面制裁砸晕俄罗斯</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cjotkt3047/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cjotkt3047/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/1/26/n12712473.htm">预防老人跌倒 彰化荣家实施影片宣导</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/1/26/n12712473.htm">预防老人跌倒 彰化荣家实施影片宣导</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cjotkt3047/djy/blob/master/gb/21/1/26/n12712473.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cjotkt3047/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cjotkt3047/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cjotkt3047/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cjotkt3047/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cjotkt3047/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cjotkt3047/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cjotkt3047/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cjotkt3047/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cjotkt3047/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/cjotkt3047/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cjotkt3047/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cjotkt3047/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/cjotkt3047/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cjotkt3047/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cjotkt3047/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cjotkt3047/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cjotkt3047/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cjotkt3047/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cjotkt3047/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cjotkt3047/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cjotkt3047/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cjotkt3047/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cjotkt3047/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cjotkt3047/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cjotkt3047/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/1/26/n12712473.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
